# cpp-itmo

./: README.md
asm/: debug.sh  mul.asm  run.sh  sub.asm  test.sh
bigint/: big_integer.cpp  big_integer.h
dummy-vector/: CMakeLists.txt  dummy_vector.cpp  dummy_vector.h  init-repo.sh
huffman/: CMakeLists.txt  huffman-tool.cpp
huffman/huffman_lib/: binary_reader.cpp  binary_writer.cpp  counter.cpp  huffman.cpp  huffman_tree.cpp
huffman/huffman_lib/include/: binary_reader.h  binary_writer.h  consts.h  counter.h  huffman.h  huffman_tree.h
huffman/unit-tests/: tests.cpp
huffman/unit-tests/files/: cpp_tutorial  i_said_everything_i_wanted  imo2022_chinese  java_tutorial  organic_chemistry_en  simple  some_program  test_elf  war_and_peace_wiki
list-exam/: list.h
perf/: CMakeLists.txt  README.md  init-repo.sh  vcpkg.json
perf/ci-extra/: check.py  test.sh
perf/ci-extra/perf/: CMakeLists.txt  bench_jpeg.cpp  bench_json.cpp  bench_logger.cpp  bench_pi.cpp  bench_radix_sort.cpp
perf/perf/: CMakeLists.txt  bench_jpeg.cpp  bench_json.cpp  bench_logger.cpp  bench_pi.cpp  bench_radix_sort.cpp
socow-vector/: socow-vector.h
substr/: CMakeLists.txt  init-repo.sh  solution.cpp
vector/: vector.h
wordcount/: wordcount.asm
